# Edit-video-with-openCV

./: README.md
Build by C++/: CMakeLists.txt  main.cpp  vedioFunc.h  vedioProcess.cpp
Build by python/: discreteFig.py  mergeFig2Video.py
